--- a/app/scss/_main-page.scss
+++ b/app/scss/_main-page.scss
@@ -1,4 +1,6 @@
 .main-page {
+  background-color: #656170;
+  min-height: 100vh;
   
   &__subtitle {
     display: flex;
@@ -9,5 +11,20 @@
   &__subtitle-list {
     overflow: hidden;
     transition: all 0.3s linear;
+  }
+
+  &__images {
+    position: relative;
+    padding: 0 0 25% 0;
+    width: 400px;
+  }
+
+  &__img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
