--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -89,36 +89,24 @@ $responsiveType: 1;
 
 body {
   font-family: 'Montserrat', sans-serif;
-  font-weight: 300;
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.4;
   color: $default;
-  color: #333;
-  // background-color: #fff;
-  // background-color: #fff0bd;
-  background-color: #fff;
+  background-color: $mainBgColor;
   display: flex;
   flex-direction: column;
   transition: all 0.3s linear;
 
-  &.black-theme {
-    background-color: #000;
-    color: #fff0bd;
-  }
+  // &.black-theme {
+  //   background-color: #000;
+  //   color: #fff0bd;
+  // }
 }
 
-// .body--hidden {
-//   overflow: hidden;
-// }
 
 .main {
   flex-grow: 1;
-}
-
-.container {
-  // max-width: 1320px;
-  // margin: 0 auto;
-  // padding: 0 15px;
 }
 
 .btn {
@@ -128,7 +116,7 @@ body {
   line-height: 1.3;
   letter-spacing: 0.03em;
   border-radius: 6px;
-  color: $white;
+  color: #333;
   background-color: $accent;
   padding: 12px 34px;
   outline: transparent;
@@ -139,7 +127,7 @@ body {
     }
 
     &:hover {
-      background-color: $white;
+      background-color: #222;
       color: $accent;
     }
 
@@ -206,6 +194,7 @@ body {
     transition: all 0.6s linear;
   }
 }
+
 .lock {
   position: relative;
   
@@ -214,4 +203,9 @@ body {
     opacity: 1;
     z-index: 2;
   }
+}
+
+.section {
+  min-height: 100vh;
+  transition: opacity 1.7s linear;
 }
