--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -110,30 +110,36 @@ body {
 }
 
 .btn {
+  position: relative;
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.3;
   letter-spacing: 0.03em;
-  border-radius: 6px;
-  color: #333;
-  background-color: $accent;
+  border-radius: 15px;
+  color: $accent;
+  background-color: transparent;
   padding: 12px 34px;
+  box-shadow: 0px 1px 2px 0px rgba(0, 255, 255, 0.7),
+      1px 2px 4px 0px rgba(0, 255, 255, 0.7),
+      2px 4px 8px 0px rgba(0, 255, 255, 0.7),
+      2px 4px 16px 0px rgba(0, 255, 255, 0.7);
   outline: transparent;
   transition: box-shadow linear 0.2s, background-color linear 0.2s, color linear 0.2s;
 
     &:focus {
-      box-shadow: 0 0 0 4px #E0EDCF;
+      transform: scale(1.1);
+      background-color: $accent;
+      color: $secondBgColor;
     }
 
     &:hover {
-      background-color: #222;
-      color: $accent;
+      background-color: $accent;
+      color: $secondBgColor;
     }
 
     &:active {
-      box-shadow: inset 0 4px 4px rgba(0, 0, 0, 0.25);
-      color: rgba(255, 255, 255, 0.5);
+      top: -3px;
     }
 
     @include r(768) {
@@ -155,57 +161,11 @@ body {
   overflow: hidden;
 }
 
-.title {
-  // @extend %ruda-600;
-  // line-height: 1.4;
-  // letter-spacing: 0.03em;
-  // color: $dark-900;
-  // text-align: center;
-  // margin-bottom: 30px;
-  // padding-top: 72px;
-  // text-transform: uppercase;
-  @include adaptiveValue("font-size", 40, 26);
-  margin-bottom: 20px;
-  text-shadow: 5px -2px 11px black, 10px -2px 25px #ededf3, 7px 10px 20px rgb(255, 217, 0);
-  transition: all 0.2s linear;
-  
-  .black-theme & {
-    text-shadow: 5px -2px 11px #fff, 10px -2px 25px #ededf3, 7px 10px 20px #c5c5c5;
-  }
-}
-
-
 .body-lock {
   overflow: hidden;
 }
 
-.content {
-
-  &::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    background-color: $default;
-    visibility: hidden;
-    opacity: 0;
-    transition: all 0.6s linear;
-  }
-}
-
-.lock {
-  position: relative;
-  
-  &::after {
-    visibility: visible;
-    opacity: 1;
-    z-index: 2;
-  }
-}
-
 .section {
-  min-height: 100vh;
+  height: 100vh;
   transition: opacity 1.7s linear;
 }
