--- a/app/scss/_main-page.scss
+++ b/app/scss/_main-page.scss
@@ -1,19 +1,108 @@
 .main-page { 
+  &__container {
+    height: 100vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    @media (max-width:$tablet){
+      align-items: flex-start;
+    }
+  }
+
+  &__content {
+    p {
+      margin-bottom: 35px;
+
+      @media (max-width:$mobile){
+         font-size: 14px; 
+      }
+    }
+  }
+  
   &__subtitle {
     display: flex;
     gap: 10px;
     overflow: hidden;
+    margin-bottom: 25px;
   }
 
   &__subtitle-list {
     overflow: hidden;
     transition: all 0.3s linear;
+
+    div {
+      color: $accent;
+      min-height: 49px;
+    }
+  }
+  
+  &__suptitle,
+  &__subtitle {
+    @include adaptiveValue("font-size", 35, 18);
+  }
+
+  &__title {
+    @include adaptiveValue("font-size", 48, 20);
+    font-weight: 600;
+    margin: 5px 0;
+  }
+
+  &__list {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-bottom: 35px;
+  }
+
+  &__link {
+    display: block;
+    border-radius: 50%;
+    border: 1px solid $accent;
+    padding: 10px;
+    outline: transparent;
+    transition: all 0.2s linear;
+    box-shadow: 0px 1px 2px 0px rgba(0, 255, 255, 0.7),
+        1px 2px 4px 0px rgba(0, 255, 255, 0.7),
+        2px 4px 8px 0px rgba(0, 255, 255, 0.7),
+        2px 4px 16px 0px rgba(0, 255, 255, 0.7);
+
+    &:focus {
+      transform: scale(1.1);
+      background-color: $accent;
+
+      .main-page__icon {
+        background-color: $secondBgColor;
+      }
+    }
+
+    &:hover {
+      border-color: transparent;
+      background-color: $accent;
+
+      .main-page__icon {
+        background-color: $secondBgColor;
+      }
+    }
+  }
+
+  &__icon {
+    display: block;
+    width: 25px;
+    height: 25px;
+    background-color: $accent;
+    transition: all 0.2s linear;
+  }
+
+  &__btn {
+    display: inline-block;
   }
 
   &__images {
     position: relative;
-    padding: 0 0 25% 0;
-    width: 400px;
+    padding: 0 0 55% 0;
+    width: 35vw;
   }
 
   &__img {
@@ -23,5 +112,8 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    pointer-events: none;
   }
+
+  
 }
