--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -88,7 +88,7 @@ $responsiveType: 1;
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Philosopher', sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.4;
@@ -110,8 +110,8 @@ body {
 }
 
 .btn {
+  font-family: 'KellySlab', sans-serif;
   position: relative;
-  font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.3;
