--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -15,6 +15,8 @@
 }
 
 .header-nav {
+  font-family: 'Comfortaa', sans-serif;
+  font-weight: 500;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -25,7 +27,7 @@
     align-items: center;
     @include adaptiveValue("gap", 60, 20);
 
-    @include r(576) {
+    @include r(900) {
       position: absolute;
       top: -2000%;
       left: 0;
@@ -77,7 +79,7 @@
   display: none;
   transition: all 0.2s linear;
 
-  @include r(576) {
+  @include r(900) {
     display: block;
     z-index: 2;
   }
