--- a/app/scss/_contacts.scss
+++ b/app/scss/_contacts.scss
@@ -1,35 +1,74 @@
 .contacts {
   background-color: $secondBgColor;
+
+  &__title {
+    margin-bottom: 50px;
+  }
 }
 
 .contacts-form {
-  height: 50vh;
-  display: grid;
-  grid-template-columns: minmax(100px, 200px) minmax(100px, 200px) minmax(100px, 200px) 1fr;
-  grid-template-rows: 50px 50px 50px 150px;
-  // grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)) 1fr;
-  // grid-template-rows: repeat(3, 50px) 200px;
-  gap: 30px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 10px;
+  row-gap: 30px;
 
   &__item {
-    display: flex;
+    flex: 1 1 auto;
 
     &:last-child {
-      // grid-column: span 3;
+      width: 100%;
     }
   }
   
   &__label {
-    // display: flex;
-    background-color: $mainBgColor;
-    // flex: 1 1 auto;
+    display: flex;
+    position: relative;
 
     & input, textarea {
-      // flex: 1 1 auto;
+      flex: 1 1 auto;
+      background-color: $mainBgColor;
+      padding: 20px;
+      border-radius: 15px;
+      color: $default;
+      outline: transparent;
+
+      &:focus {
+        border: 1px solid $default;
+
+        & ~ span {
+          top: -45%;
+          left: 5px;
+          font-size: 14px;
+        }
+      }
+      
+      &:hover {
+        
+      }
+      
+      &:active {
+        
+      }
+
     }
 
     & textarea {
       resize: none;
+
+      &:focus {
+        & ~ span {
+          top: -30%;
+        }
+      }
     }
+  }
+
+  &__text {
+    position: absolute;
+    top: 20%;
+    left: 10px;
+    pointer-events: none;
+    transition: all linear 0.4s;
   }
 }
